--- a/FootLand/templates/billing_details.html
+++ b/FootLand/templates/billing_details.html
@@ -135,6 +135,10 @@
                 <label for="state">State:</label>
                 <input type="text" id="state" name="state" value="{{ user_profile.state }}" required>
             </div>
+            <div>
+                <label for="district">District:</label>
+                <input type="text" id="district" name="district" value="{{ user_profile.district }}" required>
+            </div>
 
             <div class="buttons">
                 <button type="submit" class="save-btn">Save Details</button>
