--- a/FootLand/templates/billing_details2.html
+++ b/FootLand/templates/billing_details2.html
@@ -162,7 +162,8 @@
             <p><strong>{{ user_profile.user.first_name }} {{ user_profile.user.last_name }}</strong></p>
             <p>{{ user_profile.address }}</p>
             <p>{{ user_profile.street }}, {{ user_profile.house_no }}</p>
-            <p>{{ user_profile.state }}, {{ user_profile.pincode }}</p>
+            <p>{{ user_profile.district }}, {{ user_profile.pincode }}</p>
+            <p>{{ user_profile.state }}</p>
             <p>Phone: {{ user_profile.phone }}</p>
         </div>
 
